tests/scripts/errors/runtime/call_number.cdo
VAR x = 5;
x(1, 2);
